# second_demo_nonboost_asio_server

./: Auth_answer_message.cpp  Auth_answer_message.h  CMakeLists.txt  Connection.cpp  Connection.h  Job_send_message.cpp  Job_send_message.h  Message.cpp  Message.h  README.md  Server.cpp  Server.h  Signer_and_verifier.cpp  Signer_and_verifier.h  close_connection.cpp  close_connection.h  main.cpp  second_demo_nonboost_asio_server.mk  second_demo_nonboost_asio_server.project  second_demo_nonboost_asio_server.txt
certs/: server.key  server.key.secure
jobfiles/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh  09.sh  10.sh  11.sh  12.sh  13.sh  14.sh  15.sh
makecerts/: dh2048.pem  makecerts.sh  server.crt  server.csr
